--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
-Privacy Policy for PinPinView
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Privacy Policy - PinPinView</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #222; }
+        h1 { color: #333; }
+    </style>
+</head>
+<body>
+    <h1>Privacy Policy for PinPinView</h1>
+    <p><strong>Effective date:</strong> October 16, 2025</p>
 
-Effective date: October 16, 2025
+    <p>PinPinView ("we", "our", or "us") operates the PinPinView mobile application (the "App").</p>
+    <p>This page informs you of our policies regarding the collection, use, and disclosure of personal information when you use our App.</p>
 
-PinPinView ("we", "our", or "us") operates the PinPinView mobile application (the "App").
+    <h2>1. Information Collection and Use</h2>
+    <p>We may collect basic information such as email address or account ID to provide login functionality. All data is stored securely using Firebase services (Google Firebase Authentication and Firestore).</p>
 
-This page informs you of our policies regarding the collection, use, and disclosure of personal information when you use our App.
+    <h2>2. Data Sharing</h2>
+    <p>We do not sell or share your personal information with third parties. Data is only shared with Firebase (Google) for authentication and analytics purposes.</p>
 
-We do not collect or share any personal information except as described in this policy.
+    <h2>3. Security</h2>
+    <p>We value your trust in providing your information and use commercially acceptable means to protect it.</p>
 
-1. Information Collection and Use
+    <h2>4. Changes to This Privacy Policy</h2>
+    <p>We may update this policy from time to time. You are advised to review this page periodically for any changes.</p>
 
-We may collect basic information such as email address or account ID to provide login functionality.
-All data is stored securely using Firebase services (Google Firebase Authentication and Firestore).
-
-2. Data Sharing
-
-We do not sell or share your personal information with third parties.
-Data is only shared with Firebase (Google) for authentication and analytics purposes.
-
-3. Security
-
-We value your trust in providing your information and use commercially acceptable means to protect it.
-
-4. Changes to This Privacy Policy
-
-We may update this policy from time to time. You are advised to review this page periodically for any changes.
-
-5. Contact Us
-
-If you have any questions or suggestions about our Privacy Policy, contact us at:
-📧 supercosition@gmail.com
+    <h2>5. Contact Us</h2>
+    <p>If you have any questions or suggestions about our Privacy Policy, contact us at:
+    <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+</body>
+</html>
