--- a/index.html
+++ b/index.html
@@ -1,35 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - PinPinView</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #222; }
-        h1 { color: #333; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy Policy - PinPinView</title>
+  <style>
+    body {
+      font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+      background-color: rgb(250, 213, 21);
+      margin: 0;
+      padding: 0;
+      color: #222;
+    }
+    .container {
+      max-width: 900px;
+      margin: 60px auto;
+      background: #fff;
+      border-radius: 20px;
+      padding: 40px 60px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    }
+    h1 {
+      color: #000;
+      text-align: center;
+      font-size: 2.4em;
+      margin-bottom: 10px;
+    }
+    h2 {
+      margin-top: 35px;
+      color: #333;
+    }
+    p {
+      line-height: 1.7;
+      font-size: 1.05em;
+    }
+    a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
     <h1>Privacy Policy for PinPinView</h1>
     <p><strong>Effective date:</strong> October 16, 2025</p>
 
-    <p>PinPinView ("we", "our", or "us") operates the PinPinView mobile application (the "App").</p>
-    <p>This page informs you of our policies regarding the collection, use, and disclosure of personal information when you use our App.</p>
+    <p>
+      PinPinView ("we", "our", or "us") operates the PinPinView mobile application (the "App").
+      This Privacy Policy describes how we collect, use, and protect information when you use our App.
+    </p>
 
     <h2>1. Information Collection and Use</h2>
-    <p>We may collect basic information such as email address or account ID to provide login functionality. All data is stored securely using Firebase services (Google Firebase Authentication and Firestore).</p>
-
-    <h2>2. Data Sharing</h2>
-    <p>We do not sell or share your personal information with third parties. Data is only shared with Firebase (Google) for authentication and analytics purposes.</p>
-
-    <h2>3. Security</h2>
-    <p>We value your trust in providing your information and use commercially acceptable means to protect it.</p>
-
-    <h2>4. Changes to This Privacy Policy</h2>
-    <p>We may update this policy from time to time. You are advised to review this page periodically for any changes.</p>
-
-    <h2>5. Contact Us</h2>
-    <p>If you have any questions or suggestions about our Privacy Policy, contact us at:
-    <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-</body>
-</html>
+    <p>
+      We collect limited personal data such as your email address or account ID to enable login and account management.
+      All data is stored securely using Google Firebase Authentication and Firestore. We may also collect analytics data
+      to help i
