--- a/index.html
+++ b/index.html
@@ -63,4 +63,44 @@
     <p>
       We collect limited personal data such as your email address or account ID to enable login and account management.
       All data is stored securely using Google Firebase Authentication and Firestore. We may also collect analytics data
-      to help i
+      to help improve your user experience.
+    </p>
+
+    <h2>2. Data Sharing</h2>
+    <p>
+      We do not sell or rent user data. Data may be processed by trusted third-party services like Google Firebase
+      to provide authentication, database, or analytics functionality. These providers are bound by privacy and security
+      standards compliant with GDPR and other applicable laws.
+    </p>
+
+    <h2>3. Security</h2>
+    <p>
+      We use commercially reasonable security practices to protect your information. However, please note that
+      no method of electronic storage or transmission is 100% secure.
+    </p>
+
+    <h2>4. Children’s Privacy</h2>
+    <p>
+      Our App is not directed to children under 13. We do not knowingly collect personally identifiable information
+      from anyone under the age of 13.
+    </p>
+
+    <h2>5. Changes to This Privacy Policy</h2>
+    <p>
+      We may update our Privacy Policy from time to time. Any updates will be posted on this page with a revised
+      “Effective date.”
+    </p>
+
+    <h2>6. Contact Us</h2>
+    <p>
+      If you have any questions or suggestions about our Privacy Policy, please contact us at:
+      <br />
+      📧 <a href="mailto:supercosition@gmail.com">supercosition@gmail.com</a>
+    </p>
+
+    <footer>
+      © 2025 PinPinView. All rights reserved.
+    </footer>
+  </div>
+</body>
+</html>
