Add Delete Request

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy - PinPinView</title>
+  <title>Privacy Policy & Account Deletion - PinPinView</title>
   <style>
     body {
-      font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+      font-family: "Inter", "Segoe UI", "Helvetica Neue", Arial, sans-serif;
       background-color: rgb(250, 213, 21);
       margin: 0;
       padding: 0;
@@ -16,90 +16,111 @@
       max-width: 900px;
       margin: 60px auto;
       background: #fff;
-      border-radius: 20px;
-      padding: 40px 60px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+      border-radius: 24px;
+      padding: 60px 70px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+    }
+    h1, h2 {
+      text-align: center;
+      font-weight: 700;
+      color: #222;
     }
     h1 {
-      color: #000;
-      text-align: center;
       font-size: 2.4em;
       margin-bottom: 10px;
     }
     h2 {
-      margin-top: 35px;
-      color: #333;
+      margin-top: 50px;
+      font-size: 1.8em;
+      border-bottom: 3px solid rgb(250, 213, 21);
+      display: inline-block;
+      padding-bottom: 6px;
     }
     p {
       line-height: 1.7;
       font-size: 1.05em;
+      margin: 16px 0;
+    }
+    strong {
+      color: #000;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9em;
+      color: #555;
+      margin-top: 60px;
     }
     a {
-      color: #0077cc;
+      color: #007aff;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
-    footer {
-      text-align: center;
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #555;
-    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Privacy Policy for PinPinView</h1>
-    <p><strong>Effective date:</strong> October 16, 2025</p>
+    <h1>Privacy Policy</h1>
+    <p><strong>Effective Date:</strong> October 16, 2025</p>
 
-    <p>
-      PinPinView ("we", "our", or "us") operates the PinPinView mobile application (the "App").
-      This Privacy Policy describes how we collect, use, and protect information when you use our App.
-    </p>
+    <p>PinPinView ("we", "our", or "us") operates the PinPinView mobile application (the "App").</p>
+
+    <p>This page informs you of our policies regarding the collection, use, and disclosure of personal information when you use our App.</p>
 
     <h2>1. Information Collection and Use</h2>
     <p>
-      We collect limited personal data such as your email address or account ID to enable login and account management.
-      All data is stored securely using Google Firebase Authentication and Firestore. We may also collect analytics data
-      to help improve your user experience.
+      We may collect basic information such as email address or account ID to provide login functionality.
+      All data is securely stored using Google Firebase services (Firebase Authentication, Firestore, and Functions).
     </p>
 
     <h2>2. Data Sharing</h2>
     <p>
-      We do not sell or rent user data. Data may be processed by trusted third-party services like Google Firebase
-      to provide authentication, database, or analytics functionality. These providers are bound by privacy and security
-      standards compliant with GDPR and other applicable laws.
+      We do not sell or share your personal information with third parties.
+      Data is only shared with Google Firebase for authentication, cloud storage, and analytics purposes.
     </p>
 
     <h2>3. Security</h2>
     <p>
-      We use commercially reasonable security practices to protect your information. However, please note that
-      no method of electronic storage or transmission is 100% secure.
+      We value your trust in providing your information and use commercially acceptable means to protect it.
+      However, no method of transmission over the internet or electronic storage is 100% secure.
     </p>
 
-    <h2>4. Children’s Privacy</h2>
+    <h2>4. Changes to This Policy</h2>
     <p>
-      Our App is not directed to children under 13. We do not knowingly collect personally identifiable information
-      from anyone under the age of 13.
+      We may update this Privacy Policy from time to time.
+      You are advised to review this page periodically for any changes.
+      Changes are effective immediately after they are posted on this page.
     </p>
 
-    <h2>5. Changes to This Privacy Policy</h2>
+    <h2>5. Contact Us</h2>
     <p>
-      We may update our Privacy Policy from time to time. Any updates will be posted on this page with a revised
-      “Effective date.”
-    </p>
-
-    <h2>6. Contact Us</h2>
-    <p>
-      If you have any questions or suggestions about our Privacy Policy, please contact us at:
+      If you have any questions or suggestions about this Privacy Policy, please contact us at:
       <br />
-      📧 <a href="mailto:supercosition@gmail.com">supercosition@gmail.com</a>
+      📧 <strong>supercosition@gmail.com</strong>
+    </p>
+
+    <h2>6. Account Deletion</h2>
+    <p>
+      If you wish to permanently delete your PinPinView account and all associated data,
+      please send an email request to:
+      <br />
+      📧 <strong>supercosition@gmail.com</strong>
+    </p>
+
+    <p>
+      After verifying your identity, we will delete your account and all associated data
+      (Firebase Authentication account, Firestore user data, and related business information)
+      within 30 days.
+    </p>
+
+    <p>
+      If you reinstall the app later, you will need to register a new account from scratch.
+      Your previous data will not be recoverable.
     </p>
 
     <footer>
-      © 2025 PinPinView. All rights reserved.
+      © 2025 PinPinView — All Rights Reserved.
     </footer>
   </div>
 </body>
